# tree-sitter-masterbelt

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  lexical.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: release-crates.yml  release-npm.yml  release-pypi.yml
bindings/c/: tree-sitter-masterbelt.pc.in
bindings/c/tree_sitter/: tree-sitter-masterbelt.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_masterbelt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMasterbeltTests/: TreeSitterMasterbeltTests.swift
queries/: highlights.scm
queries/helix/: highlights.scm
queries/zed/: highlights.scm
src/: grammar.json  node-types.json  parser.c
