[package]
name = "tree-sitter-masterbelt"
description = "masterbelt grammar for tree-sitter"
version = "0.1.20260612-nightly.2df8a77"
authors = [""]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "masterbelt"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/masterbelt/tree-sitter-masterbelt"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
